--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-       <title>basic</title> 
+       <title>My Homepage</title> 
     </head>
     <body>
         hello world!!!
