--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
                                 <h1 class="display-5 fw-bolder text-white mb-2">Khushi Chitnis </h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Now I am in 12th std. My branch is Computer Technology .I want to become backend devloper.Now i am learnig Programming languages. </p>
+                                <p class="lead fw-normal text-white-50 mb-4">Now I am in 12th std. My branch is Computer Technology .I want to become backend devloper.Now i am learning Programming languages. </p>
                                 <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
                                     <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
                                     <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
